feat: [SRM-14836]: move monitored service entity to platform level ch… (#48664)
* feat: [SRM-14836]: move monitored service entity to platform level changes

* removed unused import

* feat: [SRM-14836]: added a new API for MS listing page for diffrent modules

* worked on review comments